# Fluorite-Linux

./: .gitignore  Arch Macbook.md  LICENSE  README.md  index.html  script.js  style.css
.github/workflows/: greetings.yml
MesaOSServe/: app.js  header.js  home.js  style.css
css/: styles.css  templatemo-style.css
mesakernel/: Cargo.toml
mesakernel/src/: main.rs  vga_buffer.rs
mesakernel/src/cargo/: config.toml
releng/: packages.x86_64  profiledef.sh
releng-vos/: profiledef.sh
releng-vos/airootfs/etc/: gshadow  hostname  os-release  passwd  shadow
releng/airootfs/etc/: gshadow  hostname  motd  os-release  passwd  shadow
releng/grub/: grub.cfg  loopback.cfg
releng/syslinux/: archiso_head.cfg  archiso_pxe-linux.cfg  archiso_sys-linux.cfg
