[package]
name = "mesakernel"
version = "0.1.0-rc1"
edition = "2021"
authors = ["Sam Victor, Philipp Oppermann"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# Set panic strategy to abort
[profile.dev] # the profile used for `cargo build`
panic = "abort" # Disable Stack unwinding on panic

[profile.release] # the profile used for `cargo build --release`
panic = "abort" # Disable Stack unwinding on panic
